--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsoa spec-and-routes && tsc",
     "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src",
-    "bstart": "npm run build && node dist/server.js",
+    "dev": "nodemon --watch src -e ts,json -i 'src/generated/*' --exec 'npm run build && node dist/server.js'",
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
