--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-winston": "^4.1.0",
     "inversify": "^5.0.5",
     "mongodb": "^3.6.4",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
     "tsoa": "^3.5.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   }
 }
